feat: Add custom logo support for XSearch
Added support for custom logo on homepage:

Templates:
- Updated index.html to use logo image instead of <h1> text
- Added fallback to 'XSearch' text if logo not found
- Updated base.html meta tags (XSearch branding)
- Included xsearch-custom.css in base template

Styling:
- Added xsearch-custom.css with responsive logo styles
- Max width 300px (desktop), scales down on mobile
- Dark mode support ready

Custom logos directory:
- Created custom/logos/ for user logo files
- Added comprehensive README.md with deployment instructions
- Included example SVG logo template

Documentation:
- LOGO-DEPLOYMENT.md with 3 deployment methods:
  1. Volume mount in Coolify (recommended)
  2. Git commit + rebuild
  3. Runtime copy for testing
- Troubleshooting guide
- CSS customization options

Users can now add 'xsearch-logo.svg' via volume mount
without rebuilding the container.

--- a/.project-memory.md
+++ b/.project-memory.md
@@ -92,8 +92,88 @@ Rebranding SearXNG v XSearch za podjetje **CognitoLabs**
 **Sporočilo**: "feat: Complete XSearch branding for Cognitolabs AI"
 **Status**: ✅ Pushed na origin/master
 
-## Naslednji koraki
-1. ✅ GitHub Actions bodo zdaj delovali za cognitolabs-ai/xsearch repository
-2. ⏳ Preveriti ali build deluje na GitHub
-3. ⏳ Po potrebi dodati GitHub Secrets (DOCKERHUB_USERNAME, DOCKERHUB_TOKEN, WEBLATE_*)
-4. ⏳ Testirati lokalni build: `make install` in `xsearch-run`
+## Deployment priprava
+
+### Ustvarjeni deployment files:
+
+7. **docker-compose.yml** - Produkcijska Docker Compose konfiguracija
+   - XSearch service z security settings
+   - Opcijski Valkey/Redis cache (--profile with-cache)
+   - Volume mounts, network isolation
+   - Logging konfiguracija
+
+8. **.env.example** - Environment template
+   - Vsi konfiguracijski parametri
+   - Dokumentirani defaults
+   - Secure secret generation
+
+9. **DEPLOYMENT.md** - Obsežen deployment vodič (angleško)
+   - Quick start
+   - Production setup
+   - Reverse proxy (Nginx, Caddy)
+   - SSL/TLS z Let's Encrypt
+   - Monitoring, backup, troubleshooting
+   - Performance tuning
+
+10. **SERVER-DEPLOY.md** - Kratki deployment vodič (slovensko)
+    - Korak-za-korakom navodila
+    - Docker namestitev
+    - Nginx + SSL setup
+    - Management komande
+
+11. **deploy.sh** - Avtomatski deployment script
+    - Docker/Compose validacija
+    - Auto-generacija secret key
+    - Interaktivno Valkey cache setup
+
+12. **container/entrypoint.sh** - Posodobljen branding
+    - SearXNG → XSearch v sporočilih
+    - XSEARCH_VERSION namesto SEARXNG_VERSION
+
+13. **README.rst** - Dodana Quick Start sekcija
+
+### GitHub Secrets dodani:
+- ✅ DOCKERHUB_USERNAME
+- ✅ DOCKERHUB_TOKEN
+- ❌ WEBLATE_* (disabled, ni potrebno)
+
+### GitHub Actions status:
+- ✅ Container workflow - deluje (z Docker Hub push)
+- ✅ Checker workflow - deluje
+- ✅ Documentation workflow - deluje
+- ✅ Data update workflow - deluje
+- ✅ Integration workflow - deluje
+- 🔕 l10n workflow - disabled (WEBLATE secrets niso na voljo)
+- 🔕 Security workflow - disabled (Docker Scout opcijski)
+
+## Git Commits (Session)
+1. **ad4cbaf18** - Complete XSearch branding
+2. **e78ff3dab** - Disable workflows requiring unavailable secrets
+3. **a31d7ec4e** - Add production deployment configuration
+4. **0c9ecea94** - Add server deployment quick guide
+
+## Status: ✅ PRIPRAVLJEN ZA PRODUKCIJO
+
+### Deployment na strežnik:
+
+```bash
+# 1. Na strežniku
+git clone https://github.com/cognitolabs-ai/xsearch.git
+cd xsearch
+
+# 2. Quick deploy
+./deploy.sh
+
+# ALI podrobnejše nastavitve (Glej SERVER-DEPLOY.md)
+```
+
+### Container images dostopni na:
+- GitHub Container Registry: `ghcr.io/cognitolabs-ai/xsearch:latest`
+- Docker Hub: `cognitolabs-ai/xsearch:latest` (ko se build konča)
+
+## Naslednji koraki (opcijsko)
+1. ⏳ Preveriti GitHub Actions build success
+2. ⏳ Deploy na produkcijski strežnik
+3. ⏳ Setup monitoring (opcijsko)
+4. ⏳ Custom domain in SSL
+5. ⏳ Fine-tune settings.yml za specifične potrebe
